namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-launchpad-auth-dev/07-servicemonitor.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: hmpps-launchpad-auth-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: monitoring
